<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Face Liveness Detector</string>
    <string name="liveness_detection_method_1_name">Method 1</string>
    <string name="liveness_detection_method_2_name">Method 2</string>
    <string name="unknown_status_label">UNKNOWN</string>
    <string name="fake_status_label">FAKE</string>
    <string name="real_status_label">REAL</string>
    <string name="detect_button_label">DETECT</string>
    <string name="status_label">STATUS</string>
    <string name="camera_permissions_not_granted_message">ERROR: Camera permissions not granted</string>
    <string name="face_liveness_detection_methods_label">Face liveness detection methods:</string>

    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_key_live_preview_face_detection_contour_mode" translatable="false">lpfdcm</string>
    <string name="pref_key_live_preview_face_detection_classification_mode" translatable="false">lpfdcfm</string>
    <string name="pref_key_live_preview_face_detection_performance_mode" translatable="false">lpfdpm</string>
    <string name="pref_key_live_preview_face_detection_face_tracking" translatable="false">lpfdft</string>
    <string name="pref_key_live_preview_face_detection_min_face_size" translatable="false">lpfdmfs</string>
    <string name="pref_key_camerax_target_resolution" translatable="false">ctas</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="detection_method">Liveness detection method</string>
    <string name="face_liveness_auto_check">Face liveness auto detection</string>
    <string name="auto_check_timeout_title">Auto check timeout</string>
    <string name="face_actions_number_label">Face actions number to verify</string>
    <string name="verification_timeout_label">Livenes activity verification timeout</string>
    <string name="log_file_name_label">Log file name</string>
    <string name="logging_active_switch_label">Logging active</string>
    <string name="logging_tag_label">Logging Tag</string>
    <string name="probability_threshold_label">Probability threshold (in %)</string>
    <string name="flashimage">flashImage</string>
</resources>